--- a/book-network/src/main/resources/application-dev.properties
+++ b/book-network/src/main/resources/application-dev.properties
@@ -9,10 +9,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.mail.host=smtp.gmail.com
+spring.mail.host=${EMAIL_HOSTNAME}
 spring.mail.port=465
-spring.mail.username=addlater
-spring.mail.password=addlater
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.ssl.trust="*"
@@ -22,4 +22,5 @@ application.security.jwt.secretKey=NFID93R3JF39IR9832U4324J923UIR9832UR0J932UR92
 application.security.jwt.jwtExpiration=8640000
 application.mailing.frontend.activation-url=http://localhost:3000/activate-account
 application.file.upload.photos-output-path= ./uploads
+application.cors.origins=http://localhost:3000","http://localhost:8080,http://192.168.0.104:9000,http://192.168.0.104:3000
 server.port=9000
