--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup jdk
-        uses: actions/setup-jdk@v4
+      - name: Setup java
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: "corretto"
@@ -36,8 +36,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup jdk
-        uses: actions/setup-jdk@v4
+      - name: Setup java
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: "corretto"
@@ -54,8 +54,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup jdk
-        uses: actions/setup-jdk@v4
+      - name: Setup java
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: "corretto"
@@ -72,8 +72,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Setup jdk
-        uses: actions/setup-jdk@v4
+      - name: Setup java
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: "corretto"
