--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -23,11 +23,13 @@ jobs:
         with:
           java-version: 17
           distribution: "corretto"
+      - name: Set execute permissions for mvnw
+        run: chmod +x ./mvnw
       - name: Compile code
         run: |
           cd book-network
-          chmod +x ./mvnw clean compile
-  
+          ./mvnw clean compile
+
   unit-tests:
     runs-on: self-hosted
     name: Unit tests
@@ -41,10 +43,12 @@ jobs:
         with:
           java-version: 17
           distribution: "corretto"
+      - name: Set execute permissions for mvnw
+        run: chmod +x ./mvnw
       - name: Running unit tests
         run: |
           cd book-network
-          chmod +x ./mvnw clean test
+          ./mvnw clean test
   build:
     runs-on: self-hosted
     name: Build backend
@@ -62,7 +66,7 @@ jobs:
       - name: Build project
         run: |
           cd book-network
-          chmod +x ./mvnw clean package
+          ./mvnw clean package
   build-image:
     name: Build docker image
     runs-on: self-hosted
@@ -80,13 +84,13 @@ jobs:
       - name: Build project
         run: |
           cd book-network
-          chmod +x ./mvnw clean package
+          ./mvnw clean package
       - name: Extract project version
         id: extract_version   # to use later by id
         # getting project version
         run: |
           cd book-network
-          echo "VERSION=$(chmod +x ./mvnw help:evaluate -Dexpression='project.version' -q -DforceStdout)" >> $GITHUB_OUTPUT
+          echo "VERSION=$(./mvnw help:evaluate -Dexpression='project.version' -q -DforceStdout)" >> $GITHUB_OUTPUT
       - name: Login to docker hub
         uses: docker/login-action@v3
         with:
