--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -24,7 +24,9 @@ jobs:
           java-version: 17
           distribution: "corretto"
       - name: Set execute permissions for mvnw
-        run: chmod +x ./mvn
+        run: |
+          cd book-network    
+          chmod +x ./mvnw
       - name: Compile code
         run: |
           cd book-network
@@ -44,7 +46,9 @@ jobs:
           java-version: 17
           distribution: "corretto"
       - name: Set execute permissions for mvnw
-        run: chmod +x ./mvn
+        run: |
+          cd book-network    
+          chmod +x ./mvnw
       - name: Running unit tests
         run: |
           cd book-network
