--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -32,27 +32,27 @@ jobs:
           cd book-network
           ./mvnw clean compile
 
-  unit-tests:
-    runs-on: self-hosted
-    name: Unit tests
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup java
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: "corretto"
-      - name: Set execute permissions for mvnw
-        run: |
-          cd book-network    
-          chmod +x ./mvnw
-      - name: Running unit tests
-        run: |
-          cd book-network
-          ./mvnw clean test
+#  unit-tests:
+#    runs-on: self-hosted
+#    name: Unit tests
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#      - name: Setup java
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: 17
+#          distribution: "corretto"
+#      - name: Set execute permissions for mvnw
+#        run: |
+#          cd book-network
+#          chmod +x ./mvnw
+#      - name: Running unit tests
+#        run: |
+#          cd book-network
+#          ./mvnw clean test
   build:
     runs-on: self-hosted
     name: Build backend
