--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -56,7 +56,7 @@ jobs:
   build:
     runs-on: self-hosted
     name: Build backend
-    needs: [ compile, unit-tests ]
+    needs: [ compile]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
