--- a/.github/workflows/pipeline-backend.yml
+++ b/.github/workflows/pipeline-backend.yml
@@ -126,18 +126,18 @@ jobs:
     steps:
       - name: Set key permissions
         run:  chmod 400 bsn-api.pem
-      - name: Create deployment folder
-        run:  ssh -i "bsn-api.pem" ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}} "mkdir -p ci-cd"    # connect to instance and making folder
-      - name: Copy docker-compose file
-        run:  sudo scp docker-compose.yml ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}}:ci-cd/docker-compose.yml
-      - name: Set ENV variables and deploy
-        run: |
-          ssh -i "bsn-api.pem" ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}} <<EOF
-          export EMAIL_HOSTNAME=${{ secrets.EMAIL_HOSTNAME}}
-          export EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME}}
-          export EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD}}
-          cd ci-cd
-          docker-compose -f docker-compose.yml pull -q
-          docker-compose -f docker-compose.yml up -d
-          EOF
+#      - name: Create deployment folder
+#        run:  ssh -i "bsn-api.pem" ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}} "mkdir -p ci-cd"    # connect to instance and making folder
+#      - name: Copy docker-compose file
+#        run:  sudo scp docker-compose.yml ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}}:ci-cd/docker-compose.yml
+#      - name: Set ENV variables and deploy
+#        run: |
+#          ssh -i "bsn-api.pem" ${{ secrets.VPS_USERNAME}}@${{ secrets.VPS_IP}} <<EOF
+#          export EMAIL_HOSTNAME=${{ secrets.EMAIL_HOSTNAME}}
+#          export EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME}}
+#          export EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD}}
+#          cd ci-cd
+#          docker-compose -f docker-compose.yml pull -q
+#          docker-compose -f docker-compose.yml up -d
+#          EOF
 
